--- a/app/views/layouts/_users_footer.html.erb
+++ b/app/views/layouts/_users_footer.html.erb
@@ -1,11 +1,11 @@
 <footer class='navbar fixed-bottom' id='footer'>
   <div class='col-4'>
-    <small><%= link_to 'BOOKLETS', travels_path %></small>
+    <small><%= link_to t('.booklets'), travels_path %></small>
   </div>
   <div class='col-4 text-center'>
-    <small><%= link_to 'ALL NOTES', personal_notes_path %></small>
+    <small><%= link_to t('.all_notes'), personal_notes_path %></small>
   </div>
   <div class='col-4 text-right'>
-    <small><%= link_to 'ALL LISTS', personal_lists_path %></small>
+    <small><%= link_to t('.all_lists'), personal_lists_path %></small>
   </div>
 </footer>
