--- a/app/views/layouts/_users_sidebar.html.erb
+++ b/app/views/layouts/_users_sidebar.html.erb
@@ -5,21 +5,21 @@
 
   <hr class='dotted_white'>
 
-  <%= link_to 'HOME', user_path,
+  <%= link_to t('.home'), user_path,
               class: 'nav-link font-weight-light' %>
-  <%= link_to 'BOOKLETS', travels_path,
+  <%= link_to t('.booklets'), travels_path,
               class: 'nav-link font-weight-light' %>
-  <%= link_to 'ALL NOTES', personal_notes_path,
+  <%= link_to t('.all_notes'), personal_notes_path,
               class: 'nav-link font-weight-light' %>
-  <%= link_to 'ALL LISTS', personal_lists_path,
+  <%= link_to t('.all_lists'), personal_lists_path,
               class: 'nav-link font-weight-light' %>
-  <%= link_to 'BACK', :back,
+  <%= link_to t('.back'), :back,
               class: 'nav-link font-weight-light' %>
 
   <hr class='dotted_white'>
 
-  <%= link_to 'EDIT USER', edit_user_registration_path,
+  <%= link_to t('.edit_user'), edit_user_registration_path,
               class: 'nav-link font-weight-light' %>
-  <%= link_to 'LOG OUT', destroy_user_session_path,
+  <%= link_to t('.log_out'), destroy_user_session_path,
               method: :delete, class: 'nav-link font-weight-light' %>
 </nav>
