--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -3,9 +3,9 @@
 
 <div class='col-sm-10 offset-sm-2 contents'>
   <% if action_name == 'edit' %>
-    <h2>EDIT CARD</h2>
+    <h2><%= t('.edit_card') %></h2>
   <% else %>
-    <h2>NEW CARD</h2>
+    <h2><%= t('.new_card') %></h2>
   <% end %>
 
   <hr>
@@ -41,34 +41,34 @@
 
     <div class='form-group'>
       <%= f.text_field :title,
-                       placeholder: 'title',
+                       placeholder: t('.card_title'),
                        class: 'form-control'
       %>
     </div>
 
     <div class='form-group'>
       <%= f.text_area :sentence,
-                      placeholder: 'sentence',
+                      placeholder: t('.sentence'),
                       class: 'form-control'
       %>
     </div>
 
     <% if action_name == 'edit' %>
       <div class='form-group'>
-        <%= f.submit "UPDATE", class: 'btn btn-primary btn-sm font-weight-light' %>
-        <%= link_to_add_association 'ADD IMAGE', f, :images,
+        <%= f.submit t('.update'), class: 'btn btn-primary btn-sm font-weight-light' %>
+        <%= link_to_add_association t('.add_image'), f, :images,
               class: 'btn btn-primary btn-sm font-weight-light',
               id: 'add_image_link',
               data: { association_insertion_node: '#add_image',
                       association_insertion_method: 'append'
                     }
         %>
-        <%= link_to "DELETE", card_path(@card), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-secondary btn-sm font-weight-light' %>
+        <%= link_to t('.delete'), card_path(@card), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-secondary btn-sm font-weight-light' %>
       </div>
     <% else %>
       <div class='form-group'>
-        <%= f.submit "CREATE", class: 'btn btn-primary btn-sm font-weight-light' %>
-        <%= link_to_add_association 'ADD IMAGE', f, :images,
+        <%= f.submit t('.create'), class: 'btn btn-primary btn-sm font-weight-light' %>
+        <%= link_to_add_association t('.add_image'), f, :images,
               class: 'btn btn-primary btn-sm font-weight-light',
               id: 'add_image_link',
               data: { association_insertion_node: '#add_image',
