--- a/app/views/layouts/_travels_footer.html.erb
+++ b/app/views/layouts/_travels_footer.html.erb
@@ -1,23 +1,23 @@
 <footer class='navbar fixed-bottom' id='footer'>
   <% if controller_name == 'travels' && action_name == 'show' %>
     <div class='col-4'>
-      <small><%= link_to 'BOOKLETS', travels_path %></small>
+      <small><%= link_to t('.booklets'), travels_path %></small>
     </div>
     <div class='col-4 text-right'>
-      <small><%= link_to 'NOTES', notes_path %></small>
+      <small><%= link_to t('.notes'), notes_path %></small>
     </div>
     <div class='col-4 text-right'>
-      <small><%= link_to 'LISTS', lists_path %></small>
+      <small><%= link_to t('.lists'), lists_path %></small>
     </div>
   <% else %>
     <div class='col-4 text-center'>
-      <small><%= link_to 'INDEX', travel_path(@associated_travel) %></small>
+      <small><%= link_to t('.index'), travel_path(@associated_travel) %></small>
     </div>
     <div class='col-4 text-center'>
-      <small><%= link_to 'NOTES', notes_path %></small>
+      <small><%= link_to t('.notes'), notes_path %></small>
     </div>
     <div class='col-4 text-center'>
-      <small><%= link_to 'LISTS', lists_path %></small>
+      <small><%= link_to t('.lists'), lists_path %></small>
     </div>
   <% end %>
 </footer>
