--- a/app/views/lists/duplicate.html.erb
+++ b/app/views/lists/duplicate.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
-  <h2>DUPLICATE LIST</h2>
+  <h2><%= t('.duplicate_list') %></h2>
   <hr>
   <% if @list.errors.any? %>
     <div class='border rounded mt-2 mb-2' id='list_error_area'>
@@ -26,8 +26,8 @@
     </div>
 
     <div class='form-group'>
-      <%= f.submit 'CREATE', class: 'btn btn-primary btn-sm font-weight-light' %>
-      <%= link_to_add_association 'ADD ITEM', f, :items,
+      <%= f.submit t('.create'), class: 'btn btn-primary btn-sm font-weight-light' %>
+      <%= link_to_add_association t('.add_item'), f, :items,
             class: 'btn btn-primary btn-sm font-weight-light',
             id: 'add_item_link',
             data: { association_insertion_node: '#add_item',
