--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -8,8 +8,8 @@
     <table class='table table-sm table-bordered table-hover text-nowrap'>
       <tbody>
         <thead class='thead-light'>
-          <th>name</th>
-          <th>remark</th>
+          <th><%= t('.item_name') %></th>
+          <th><%= t('.remark') %></th>
         </thead>
         <% @list.items.each do |i| %>
           <tr>
@@ -21,11 +21,11 @@
     </table>
   </div>
 
-  <%= link_to 'EDIT LIST', edit_list_path(@list), class: 'btn btn-primary btn-sm' %>
+  <%= link_to t('.edit_list'), edit_list_path(@list), class: 'btn btn-primary btn-sm' %>
 
   <div class="btn-group">
     <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      DUPLICATE LIST
+      <%= t('.duplicate_list') %>
     </button>
     <div class="dropdown-menu">
       <% @travels.each do |t| %>
