--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -6,13 +6,13 @@
       <h2><%= @travel.title %></h2>
       <%= render 'layouts/notice' %>
       <p class='font-weight-light mb-2'>
-        <%= I18n.l(@travel.departed_at, format: :custom) %> ~ <%= I18n.l(@travel.returned_at, format: :custom) %> (<%= (@travel.returned_at - @travel.departed_at).numerator %>days)
+        <%= l(@travel.departed_at, format: :custom) %> ~ <%= l(@travel.returned_at, format: :custom) %> (<%= (@travel.returned_at - @travel.departed_at).numerator %><%= t('.days') %>)
       </p>
       <button type='button' class='btn btn-primary btn-sm font-weight-light' data-toggle='collapse' data-target='#collapse_areas' aria-expanded='false' aria-controls='collapse_areas'>
-        AREAS
+        <%= t('.areas') %>
       </button>
-      <%= link_to 'NEW CARD', new_card_path, class: 'btn btn-primary btn-sm font-weight-light' %>
-      <%= link_to 'EDIT BOOKLET', edit_travel_path(@travel), class: 'btn btn-primary btn-sm font-weight-light' %>
+      <%= link_to t('.new_card'), new_card_path, class: 'btn btn-primary btn-sm font-weight-light' %>
+      <%= link_to t('.edit_booklet'), edit_travel_path(@travel), class: 'btn btn-primary btn-sm font-weight-light' %>
     </div>
 
     <div class='col-12 table-responsive-sm collapse' id='collapse_areas'>
@@ -22,7 +22,7 @@
             <tr>
               <td><%= x.country %></td>
               <td><%= x.place %></td>
-              <td><%= I18n.l(x.arrived_at, format: :custom) %> ~ <%= I18n.l(x.left_at, format: :custom) %></td>
+              <td><%= l(x.arrived_at, format: :custom) %> ~ <%= l(x.left_at, format: :custom) %></td>
             </tr>
           <% end %>
         </tbody>
@@ -43,7 +43,7 @@
           <% end %>
           <div class='card-body'>
             <div class='card-title'><%= c.title %></div>
-            <div class='card-text'><small>updated at <%= I18n.l(c.updated_at, format: :custom) %></small></div>
+            <div class='card-text'><small><%= t('.updated_at') %> <%= l(c.updated_at, format: :custom) %></small></div>
           </div>
         </div>
       </div>
