--- a/app/views/users/landing.html.erb
+++ b/app/views/users/landing.html.erb
@@ -7,8 +7,8 @@
         <div class='title_inner'>
           <%= image_tag('logo.png', class: 'image') %>
           <div class='title_content'>
-            <p><%= link_to 'Log in', new_user_session_path, class: 'btn btn-outline-light' %></p>
-            <p>or slide</p>
+            <p><%= link_to t('.log_in'), new_user_session_path, class: 'btn btn-outline-light' %></p>
+            <p><%= t('.click_side') %></p>
           </div>
         </div>
       </div>
@@ -19,8 +19,8 @@
         <div class='nav_inner'>
           <%= image_tag('nav_image1.png', class: 'img-thumbnail image') %>
           <div class='nav_content'>
-            <p class='nav_caption'>Welcome!</p>
-            <p class='text-justify'>このアプリケーションは、旅行中に撮った写真にコメントを入れてカードを作ることができます。</p>
+            <p class='nav_caption'><%= t('.step0_caption') %></p>
+            <p class='text-justify'><%= t('.step0') %></p>
           </div>
         </div>
       </div>
@@ -31,8 +31,8 @@
         <div class='nav_inner'>
           <%= image_tag('nav_image2.png', class: 'img-thumbnail image') %>
           <div class='nav_content'>
-            <p class='nav_caption'>STEP.1</p>
-            <p class='text-justify'>最初に「NEW BOOKLET」から、旅行の予定を作成します。（画像とエリア情報は後から追加することができます。）</p>
+            <p class='nav_caption'><%= t('.step1_caption') %></p>
+            <p class='text-justify'><%= t('.step1') %></p>
           </div>
         </div>
       </div>
@@ -43,8 +43,8 @@
         <div class='nav_inner'>
           <%= image_tag('nav_image3.png', class: 'img-thumbnail image') %>
           <div class='nav_content'>
-            <p class='nav_caption'>STEP.2</p>
-            <p class='text-justify'>作成した旅行の予定から、「NEW CARD」を選択します。（アップロードする画像が2枚必要です。）</p>
+            <p class='nav_caption'><%= t('.step2_caption') %></p>
+            <p class='text-justify'><%= t('.step2') %></p>
           </div>
         </div>
       </div>
@@ -55,8 +55,8 @@
         <div class='nav_inner'>
           <%= image_tag('nav_image4.png', class: 'img-thumbnail image') %>
           <div class='nav_content'>
-            <p class='nav_caption'>STEP.3</p>
-            <p class='text-justify'>画面下部の「DOWNLOAD」からPDFを作成しダウンロードすることができます。</p>
+            <p class='nav_caption'><%= t('.step3_caption') %></p>
+            <p class='text-justify'><%= t('.step3') %></p>
           </div>
         </div>
       </div>
@@ -67,8 +67,8 @@
         <div class='nav_inner'>
           <%= image_tag('nav_image5.png', class: 'img-thumbnail image') %>
           <div class='nav_content'>
-            <p class='text-justify'>この他に、持ち物リストなどを作るリスト作成機能、メモ帳機能などがあります。Have a good trip！</p>
-            <p><%= link_to 'Sign up', new_user_registration_path, class: 'btn btn-outline-light' %></p>
+            <p class='text-justify'><%= t('.step4') %></p>
+            <p><%= link_to t('.sign_up'), new_user_registration_path, class: 'btn btn-outline-light' %></p>
           </div>
         </div>
       </div>
