--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class='form_wrapper'>
   <div class='form_inner'>
-    <h2>Sign up</h2>
+    <h2><%= t('.sign_up') %></h2>
     <%= render 'layouts/notice' %>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -16,7 +16,8 @@
 
       <div class='form-group'>
         <%= f.text_field :name,
-                         placeholder: 'name',
+                         autocomplete: 'name',
+                         placeholder: t('.name'),
                          class: 'form-control'
         %>
       </div>
@@ -24,7 +25,7 @@
       <div class='form-group'>
         <%= f.email_field :email,
                           autocomplete: 'email',
-                          placeholder: 'email',
+                          placeholder: t('.email'),
                           class: 'form-control'
         %>
       </div>
@@ -32,7 +33,7 @@
       <div class='form-group'>
         <%= f.password_field :password,
                              autocomplete: 'new-password',
-                             placeholder: "password (#{@minimum_password_length} characters minimum)",
+                             placeholder: t('.password', num: @minimum_password_length),
                              class: 'form-control'
         %>
       </div>
@@ -40,13 +41,13 @@
       <div class='form-group'>
         <%= f.password_field :password_confirmation,
                              autocomplete: 'new-password',
-                             placeholder: 'password confirmation',
+                             placeholder: t('.password_confirmation'),
                              class: 'form-control'
         %>
       </div>
 
       <div class='form-group mb-0'>
-        <%= f.submit 'Sign up', class: 'btn btn-primary' %>
+        <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
       </div>
     <% end %>
   </div>
