--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
-  <h2><%= t('.card_config') %></h2>
+  <h2><%= t('.card_config') %>(<%= @associated_travel.title %>)</h2>
   <%= render 'layouts/notice' %>
 
   <hr>
