--- a/app/views/lists/duplicate.html.erb
+++ b/app/views/lists/duplicate.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
-  <h2><%= t('.duplicate_list') %></h2>
+  <h2><%= t('.duplicate_list') %>(<%= @associated_travel.title %>)</h2>
   <hr>
   <% if @list.errors.any? %>
     <div class='border rounded mt-2 mb-2' id='list_error_area'>
